--- a/index.html
+++ b/index.html
@@ -58,46 +58,50 @@
     <!-- Beep Sound (put assets/beep.mp3 in your assets folder) -->
     <audio id="beepSound" src="assets/beep.mp3" preload="auto"></audio>
 
-
-    <!-- ===================== -->
-<!--    VVPAT PAGE (NEW)   -->
-<!-- ===================== -->
-
-<div id="vvpatPage" class="vvpat-page hidden">
-  <div class="vvpat-wrapper">
-    <div class="vvpat-card">
-      <div class="vvpat-photo-box">
-        <img id="vvpatPhoto" src="" alt="Photo" />
-        <div class="vvpat-voted-chip">VOTED ✓</div>
-      </div>
-
-      <div class="vvpat-info">
-        <div id="vvpatNameMl" class="vvpat-name-ml"></div>
-        <div id="vvpatNameEn" class="vvpat-name-en"></div>
-        <div id="vvpatWard" class="vvpat-ward"></div>
-      </div>
-
-      <div class="vvpat-symbol-section">
-        <img id="vvpatSymbolBig" class="vvpat-symbol-big" src="" alt="Symbol" />
-      </div>
-    </div>
-
-    <button id="vvpatCloseBtn" class="vvpat-btn">OK</button>
-  </div>
-</div>
-    <!-- Simple confirmation overlay -->
-    <div id="confirmOverlay" class="confirm-overlay">
-      <div class="confirm-box">
-        <div class="confirm-text">
-          Vote recorded for:
-          <div class="confirm-name-ml" id="confirmNameMl"></div>
-          <div class="confirm-name-en" id="confirmNameEn"></div>
+    <!-- =========================
+         VVPAT OVERLAY (NEW PAGE)
+         ========================= -->
+    <div id="vvpatOverlay" class="vvpat-overlay hidden">
+      <div class="vvpat-card">
+        <div class="vvpat-heading">
+          <p>വോട്ടിംഗ് മെഷീനിൽ രജിസ്റ്റർ ചെയ്തത്,</p>
+          <p>ജനപ്രതിനിധിക്ക് ഒരു വോട്ട്</p>
         </div>
-        <button id="confirmOkBtn" class="confirm-ok-btn">OK</button>
+
+        <div class="vvpat-card-main">
+          <div class="vvpat-photo-wrap">
+            <img
+              id="vvpatPhoto"
+              class="vvpat-photo"
+              src=""
+              alt="Candidate Photo"
+            />
+            <div class="vvpat-voted-chip">
+              <span>Voted</span>
+              <span class="vvpat-check">✓</span>
+            </div>
+          </div>
+
+          <div class="vvpat-info">
+            <div id="vvpatNameMl" class="vvpat-name-ml"></div>
+            <div id="vvpatNameEn" class="vvpat-name-en"></div>
+            <div id="vvpatParty" class="vvpat-party"></div>
+
+            <div class="vvpat-symbol-wrap">
+              <img
+                id="vvpatSymbol"
+                class="vvpat-symbol"
+                src=""
+                alt="Party Symbol"
+              />
+            </div>
+          </div>
+        </div>
+
+        <button id="vvpatOkBtn" class="vvpat-ok-btn">OK</button>
       </div>
     </div>
-
-
+    <!-- ========================= -->
 
     <script src="index.js"></script>
   </body>
