--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <!-- Top Tabs (Ward / Block / District) -->
       <div class="top-tabs">
         <button class="tab tab--active">Ward</button>
-        <button class="tab">Block</button>
-        <button class="tab">District</button>
+        <!-- <button class="tab">Block</button>
+        <button class="tab">District</button> -->
       </div>
 
       <!-- EVM Device -->
@@ -64,8 +64,8 @@
     <div id="vvpatOverlay" class="vvpat-overlay hidden">
       <div class="vvpat-card">
         <div class="vvpat-heading">
-          <p>വോട്ടിംഗ് മെഷീനിൽ രജിസ്റ്റർ ചെയ്തത്,</p>
-          <p>ജനപ്രതിനിധിക്ക് ഒരു വോട്ട്</p>
+          <p>വോട്ടിംഗ് മെഷീനിൽ ഒന്നാമന്‍,</p>
+          <p>ജന മനസ്സുകളിലും</p>
         </div>
 
         <div class="vvpat-card-main">
